[B][COLOR gold]v3.5.001[/COLOR][/B]
- Fix playback not starting on local resume point

[B][COLOR gold]v3.5.000[/COLOR][/B]
- Removed MetaHandler dependency. Local indicators are now handled internaly.
    [I]NOTE:[/I] Unfortunately, due to this, all [I]local[/I] watched statuses and resume
    points will reset. This was necessary for several reasons:
    Metahandler was doing unnecessary API calls, fetching information we already had -
    it was actually not needed, a leftover from Genesis days.
    There are various versions of it floating around, some (kinda) working, some don't.
    It's also not compatible with Kodi 19, and will stop working once tvdb v1 API phases out.

[B][COLOR gold]v3.4.012[/COLOR][/B]
- Fixed some issues with metadata cacheing
- Updated cloudflare scraper from source

[B][COLOR gold]v3.4.011[/COLOR][/B]
- Resume/scrobble fixes for Kodi 19

[B][COLOR gold]v3.4.010[/COLOR][/B]
- Added check for youtube add-on upon attempt to play trailer, and prompt to install it
    if it isn't already
- Reworked resume points/trakt scrobbles, as a preparation for removing MetaHandler dependency
    This means loss of local resume points. New resume points will properly propagate though
    Also Trakt scrobbles now properly stop upon finishing playback

[B][COLOR gold]v3.4.009[/COLOR][/B]
- Search queries tweaks

[B][COLOR gold]v3.4.007-8[/COLOR][/B]
- Cosmetic and other minor fixes

[B][COLOR gold]v3.4.006[/COLOR][/B]
- Added notification when trying to play trailer and API key's quota limit has been reached
- Cloudflare scraper updated from source

[B][COLOR gold]v3.4.005[/COLOR][/B]
- Added some more titles to the meta/scene mismatches function

[B][COLOR gold]v3.4.004[/COLOR][/B]
- Utilise kodi_six lib to handle py2/3 diffs on Kodi's python API
    modules cleaner
- Removed Feature: check movie/episode before importing to library
    It's just an insignificant reason to stress our providers when importing lists

[B][COLOR gold]v3.4.003[/COLOR][/B]