@@ -37,7 +37,9 @@ class captchaSolver(Captcha):
     def checkErrorStatus(response):
         if response.status_code in [500, 502]:
             raise CaptchaServiceUnavailable(
-                f'CapMonster: Server Side Error {response.status_code}'
+                'CapMonster: Server Side Error {}'.format(
+                    response.status_code
+                )
             )
 
         payload = response.json()
@@ -67,7 +69,7 @@ class captchaSolver(Captcha):
 
         response = polling2.poll(
             lambda: self.session.post(
-                f'{self.host}/getTaskResult',
+                '{}/getTaskResult'.format(self.host),
                 json={
                     'clientKey': self.clientKey,
                     'taskId': taskID
@@ -110,11 +112,11 @@ class captchaSolver(Captcha):
         if self.proxy:
             data['task'].update(self.proxy)
         else:
-            data['task']['type'] = f"{data['task']['type']}Proxyless"
+            data['task']['type'] = '{}Proxyless'.format(data['task']['type'])
 
         response = polling2.poll(
             lambda: self.session.post(
-                f'{self.host}/createTask',
+                '{}/createTask'.format(self.host),
                 json=data,
                 allow_redirects=False,
                 timeout=30
@@ -177,12 +179,12 @@ class captchaSolver(Captcha):
             except polling2.TimeoutException:
                 raise CaptchaTimeout(
                     "CapMonster: Captcha solve took to long and also failed "
-                    f"reporting the task with task id {taskID}."
+                    "reporting the task with task id {}.".format(taskID)
                 )
 
             raise CaptchaTimeout(
                 "CapMonster: Captcha solve took to long to execute "
-                f"task id {taskID}, aborting."
+                "task id {}, aborting.".format(taskID)
             )
 
 
