@@ -69,7 +69,7 @@ class captchaSolver(Captcha):
 
         response = polling2.poll(
             lambda: self.session.post(
-                f'{self.host}/user',
+                '{}/user'.format(self.host),
                 headers={'Accept': 'application/json'},
                 data={
                     'username': self.username,
@@ -101,7 +101,7 @@ class captchaSolver(Captcha):
 
         response = polling2.poll(
             lambda: self.session.post(
-                f'{self.host}/captcha/{jobID}/report',
+                '{}/captcha/{}/report'.format(self.host, jobID),
                 headers={'Accept': 'application/json'},
                 data={
                     'username': self.username,
@@ -138,7 +138,7 @@ class captchaSolver(Captcha):
 
         response = polling2.poll(
             lambda: self.session.get(
-                f'{self.host}/captcha/{jobID}',
+                '{}/captcha/{}'.format(self.host, jobID),
                 headers={'Accept': 'application/json'}
             ),
             check_success=_checkRequest,
@@ -204,7 +204,7 @@ class captchaSolver(Captcha):
 
         response = polling2.poll(
             lambda: self.session.post(
-                f'{self.host}/captcha',
+                '{}/captcha'.format(self.host),
                 headers={'Accept': 'application/json'},
                 data=data,
                 allow_redirects=False
@@ -229,7 +229,7 @@ class captchaSolver(Captcha):
         for param in ['username', 'password']:
             if not captchaParams.get(param):
                 raise CaptchaParameter(
-                    f"DeathByCaptcha: Missing '{param}' parameter."
+                    "DeathByCaptcha: Missing '{}' parameter.".format(param)
                 )
             setattr(self, param, captchaParams.get(param))
 
@@ -256,11 +256,11 @@ class captchaSolver(Captcha):
                     self.reportJob(jobID)
             except polling2.TimeoutException:
                 raise CaptchaTimeout(
-                    f"DeathByCaptcha: Captcha solve took to long and also failed reporting the job id {jobID}."
+                    "DeathByCaptcha: Captcha solve took to long and also failed reporting the job id {}.".format(jobID)
                 )
 
             raise CaptchaTimeout(
-                f"DeathByCaptcha: Captcha solve took to long to execute job id {jobID}, aborting."
+                "DeathByCaptcha: Captcha solve took to long to execute job id {}, aborting.".format(jobID)
             )
 
 
