@@ -1,3 +1,8 @@
+[B][COLOR gold]v3.5.002[/COLOR][/B]
+- Fix local resume points prompting to resume from <120 secs offset
+- Library database fixes
+- Attempt to speedup directory source list appearance a bit
+
 [B][COLOR gold]v3.5.001[/COLOR][/B]
 - Fix playback not starting on local resume point
 
